clusters/apps/default/finance-market-data-puller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-market-data-puller-deployment
  namespace: default
  labels:
    app: financial-market-data-puller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-market-data-puller-pod
  template:
    metadata:
      labels:
        app: finance-market-data-puller-pod
    spec:
      containers:
        - image: ghcr.io/crisszkutnik/financial-market-data-puller:1.0.5
          imagePullPolicy: IfNotPresent
          name: finance-market-data-puller-container
          resources:
            limits:
              memory: "512Mi"
              cpu: 1
          ports:
            - name: web
              containerPort: 8080
            - name: prom-metrics
              containerPort: 9400
