clusters/apps/default/finance-market-data-puller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-market-data-puller-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: finance-market-data-puller-pod
  ports:
    - nodePort: 30003
      port: 8080
      protocol: TCP
      targetPort: 8080
